--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,66 +1,63 @@
 // general
-html, 
+html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background: linear-gradient(45deg, navy, teal)
+  background: linear-gradient(45deg, navy, teal);
 }
 
 // landing bg
 .landing-bg {
-width:100%;
-height: 100%;
-position: fixed;
-top: 0;
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
 }
 
 // hero
 #hero {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 400px;
-    color: #ffffff;
-    font-size: 24px;
-    margin: auto;
-    position: absolute;
-    top: 36vh;
-    right: 0;
-    left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 400px;
+  color: #ffffff;
+  font-size: 24px;
+  margin: auto;
+  position: absolute;
+  top: 36vh;
+  right: 0;
+  left: 0;
 
-    h2 {
-        font-size: 48px;
-    }
+  h2 {
+    font-size: 48px;
+  }
 }
 
 // features
 #features {
-    background-color: ghostwhite;
-    padding: 40px 0;
-    margin-top: 80vh;
-    position: relative;
+  background-color: ghostwhite;
+  padding: 40px 0;
+  margin-top: 80vh;
+  position: relative;
 
-    h2 {
-        text-align: center;
+  h2 {
+    text-align: center;
+  }
+
+  figure {
+    display: flex;
+    align-items: center;
+    width: 1000px;
+    margin: 0 auto 20px;
+
+    &:last-child {
+      margin-bottom: 0;
     }
+  }
 
-    figure {
-        display: flex;
-        align-items: center;
-        width: 1000px;
-        margin: 0 auto 20px;
-
-        &:last-child {
-            margin-bottom: 0
-        }
-    }
-
-    figcaption {
-        padding: 40px;
-    }
+  figcaption {
+    padding: 40px;
+  }
 }
-
-
-
