--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -20,11 +20,11 @@ body {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 400px;
   color: #ffffff;
   font-size: 24px;
@@ -55,8 +55,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 1000px;
   margin: 0 auto 20px;
 }
@@ -68,4 +68,24 @@ body {
 #features figcaption {
   padding: 40px;
 }
+
+/* Team */
+
+.team-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+  margin: 1%;
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .teamProfile {
+    /* flex: 1 1 auto; */
+    -webkit-backdrop-filter: blur(4px);
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.4);
+  }
+}
+
 /*# sourceMappingURL=styles.css.map */
