--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -70,22 +70,59 @@ body {
 }
 
 /* Team */
+.team-wrapper h1 {
+  color: #e0e9f1;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+}
 
-.team-wrapper {
+.team-container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  align-content: space-around;
-  margin: 1%;
+  align-content: center;
+  margin-bottom: 5%;
+}
+
+.teamProfile {
+  color: #e0e9f1;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
-  .teamProfile {
-    /* flex: 1 1 auto; */
+  .team-icon {
     -webkit-backdrop-filter: blur(4px);
+    border-radius: 60%;
+    border: 10px solid transparent;
     backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.3);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
   }
+}
+
+.team-icon:hover {
+  background-color: #e0e9f1;
+}
+
+.team-icon img {
+  border-radius: 50%;
+  height: 10em;
+  width: 10em;
+}
+
+.team-profile-title h4 {
+  text-align: center;
+  margin-top: 10%;
+}
+
+.team-links {
+  padding: 1%;
+}
+.team-links a {
+  padding: 5%;
 }
 
 /*# sourceMappingURL=styles.css.map */
