--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -61,3 +61,104 @@ body {
     padding: 40px;
   }
 }
+
+/* Contribute */
+
+#contribute {
+  background: linear-gradient(45deg, #dfe9f3, white 100%);
+  padding: 40px 0;
+  margin-top: 80vh;
+  position: relative;
+
+  h2 {
+    text-align: center;
+    color: #2274a5;
+  }
+
+  h4 {
+    text-align: center;
+    color: #2274a5;
+    font-style: italic;
+  }
+
+  figure {
+    display: flex;
+    align-items: center;
+    width: 1000px;
+    margin: 0 auto 20px;
+    justify-content: center;
+  }
+
+  figure:last-child {
+    margin-bottom: 0;
+  }
+
+  figcaption {
+    padding: 40px;
+  }
+
+  .github-icon:hover {
+    opacity: 0.7;
+  }
+}
+
+/* Team */
+.team-wrapper {
+  h1 {
+    color: #e0e9f1;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
+  }
+
+  .team-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 5%;
+
+    .teamProfile {
+      color: #e0e9f1;
+      font-family: Arial, Helvetica, sans-serif;
+
+      .team-icon {
+        border-radius: 60%;
+        border: 10px solid transparent;
+        backdrop-filter: blur(5px);
+        background-color: rgba(255, 255, 255, 0.3);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        img {
+          border-radius: 50%;
+          height: 10em;
+          width: 10em;
+        }
+
+        &:hover {
+          background-color: #e0e9f1;
+        }
+      }
+
+      .team-profile-title {
+        h4 {
+          text-align: center;
+          margin-top: 10%;
+        }
+      }
+
+      .team-links {
+        padding: 1%;
+        position: relative;
+        z-index: 2;
+
+        a {
+          padding: 5%;
+        }
+      }
+    }
+  }
+}
