--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,11 +1,18 @@
 // general
-html,
 body {
   height: 100%;
-}
-
-body {
+  width: 100vw;
   background: linear-gradient(45deg, navy, teal);
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 // landing bg
@@ -16,10 +23,16 @@ body {
   top: 0;
 }
 
-// hero
 #hero {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
   flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   width: 400px;
   color: #ffffff;
@@ -29,18 +42,16 @@ body {
   top: 36vh;
   right: 0;
   left: 0;
-
   h2 {
     font-size: 48px;
   }
 }
-
 // features
 #features {
   background-color: ghostwhite;
   padding: 40px 0;
-  margin-top: 80vh;
   position: relative;
+  margin-top: 80vh;
 
   h2 {
     text-align: center;
@@ -49,8 +60,7 @@ body {
   figure {
     display: flex;
     align-items: center;
-    width: 1000px;
-    margin: 0 auto 20px;
+    padding: 0 10vw;
 
     &:last-child {
       margin-bottom: 0;
@@ -59,5 +69,100 @@ body {
 
   figcaption {
     padding: 40px;
+  }
+}
+
+/* Contribute */
+
+#contribute {
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+  /* rgb(222, 222, 226, 0.9); */
+  padding: 40px 0;
+  position: relative;
+  h2 {
+    text-align: center;
+    color: #2274a5;
+  }
+  h4 {
+    text-align: center;
+    color: #2274a5;
+    font-style: italic;
+  }
+  figure {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    width: 100%;
+    margin: 0 auto 20px;
+    justify-content: center;
+  }
+  figure:last-child {
+    margin-bottom: 0;
+  }
+  figcaption {
+    padding: 40px;
+  }
+}
+
+.github-icon:hover {
+  opacity: 0.7;
+}
+
+/* Team */
+.team-wrapper h1 {
+  color: #e0e9f1;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 5%;
+  margin-top: 5%;
+}
+
+.team-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  align-content: center;
+  margin-bottom: 5%;
+}
+
+.teamProfile {
+  color: #e0e9f1;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.team-icon {
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 60%;
+  border: 10px solid transparent;
+  backdrop-filter: blur(5px);
+  background-color: rgba(255, 255, 255, 0.3);
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+
+  img {
+    border-radius: 50%;
+    height: 10em;
+    width: 10em;
+  }
+  h4 {
+    text-align: center;
+    margin-top: 10%;
+  }
+}
+
+.team-icon:hover {
+  background-color: #e0e9f1;
+}
+
+.team-icon .team-links {
+  padding: 1%;
+  position: relative;
+  z-index: 2;
+  a {
+    padding: 5%;
   }
 }
