--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -4,14 +4,14 @@ body {
   width: 100vw;
   background: linear-gradient(45deg, navy, teal);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
 }
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+// code {
+//   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+//     monospace;
+// }
 
 // landing bg
 .landing-bg {
@@ -43,15 +43,24 @@ code {
   padding: 40px 0;
   position: relative;
   margin-top: 80vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   h2 {
     text-align: center;
   }
 
   figure {
+    height: auto;
     display: flex;
     align-items: center;
     padding: 0 10vw;
+
+    img {
+      width: 500px;
+      height: auto;
+    }
 
     &:last-child {
       margin-bottom: 0;
@@ -60,6 +69,11 @@ code {
 
   figcaption {
     padding: 40px;
+    width: 500px;
+    text-align: center;
+    font-size: 1.3em;
+    font-weight: 750;
+    letter-spacing: 0.5px;
   }
 }
 
@@ -99,56 +113,59 @@ code {
 }
 
 /* Team */
-.team-wrapper h1 {
-  color: #e0e9f1;
-  display: flex;
-  justify-content: center;
-  margin-bottom: 5%;
-  margin-top: 5%;
-}
-
-.team-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  align-content: center;
-  margin-bottom: 5%;
-}
-
-.teamProfile {
-  color: #e0e9f1;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.team-icon {
-  border-radius: 60%;
-  border: 10px solid transparent;
-  backdrop-filter: blur(5px);
-  background-color: rgba(255, 255, 255, 0.3);
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-
-  img {
-    border-radius: 50%;
-    height: 10em;
-    width: 10em;
+.team-wrapper {
+  h1 {
+    color: #e0e9f1;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5%;
+    margin-top: 5%;
   }
-  h4 {
-    text-align: center;
-    margin-top: 10%;
-  }
-}
 
-.team-icon:hover {
-  background-color: #e0e9f1;
-}
+  .team-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    margin-bottom: 5%;
 
-.team-icon .team-links {
-  padding: 1%;
-  position: relative;
-  z-index: 2;
-  a {
-    padding: 5%;
+    .teamProfile {
+      color: #e0e9f1;
+
+      .team-icon {
+        border-radius: 60%;
+        border: 10px solid transparent;
+        backdrop-filter: blur(5px);
+        background-color: rgba(255, 255, 255, 0.3);
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        img {
+          border-radius: 50%;
+          height: 10em;
+          width: 10em;
+        }
+
+        h4 {
+          text-align: center;
+          margin-top: 10%;
+        }
+
+        &hover {
+          background-color: #e0e9f1;
+        }
+
+        .team-links {
+          padding: 1%;
+          position: relative;
+          z-index: 2;
+
+          a {
+            padding: 5%;
+          }
+        }
+      }
+    }
   }
 }
