--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -19,30 +19,54 @@ code {
   height: 100%;
   position: fixed;
   top: 0;
+  z-index: -1;
 }
+
+// HERO
 
 #hero {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  width: 400px;
-  color: #ffffff;
+  justify-content: space-between;
+  color: #e0e9f1;
+  margin: 10vh;
+
   font-size: 24px;
-  margin: auto;
-  position: absolute;
-  top: 36vh;
   right: 0;
   left: 0;
   h2 {
-    font-size: 48px;
+    font-size: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  img {
+    height: 45%;
+    width: 45%;
+  }
+  button {
+    border-style: none;
+    border-radius: 5px;
+    margin: 20px;
+    color: #003459;
+    a {
+      font-style: none;
+      color: #003459;
+      text-decoration: none;
+    }
+  }
+  button:hover {
+    a {
+      color: #2274a5;
+    }
+    color: #2274a5;
   }
 }
+
 // features
 #features {
   background-color: ghostwhite;
   padding: 40px 0;
   position: relative;
-  margin-top: 80vh;
+  margin-top: 30vh; //<--changed from 80 to 30
 
   h2 {
     text-align: center;
@@ -67,7 +91,6 @@ code {
 
 #contribute {
   background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
-  /* rgb(222, 222, 226, 0.9); */
   padding: 40px 0;
   position: relative;
   h2 {
