changed sizing of logo

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -22,7 +22,7 @@ code {
   z-index: -1;
 }
 
-// HERO
+//---HERO----
 
 #hero {
   display: flex;
@@ -39,8 +39,8 @@ code {
     font-family: Arial, Helvetica, sans-serif;
   }
   img {
-    height: 45%;
-    width: 45%;
+    height: 40%;
+    width: 40%;
   }
   button {
     border-style: none;
@@ -95,7 +95,7 @@ code {
   background-color: ghostwhite;
   padding: 40px 0;
   position: relative;
-  margin-top: 30vh; //<--changed from 80 to 30
+  margin-top: 10vh; //<--changed from 80 to 10
 
   h2 {
     text-align: center;
