--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,4 +1,28 @@
 @import 'variables';
+@font-face {
+  font-family: 'VisbyRoundCF-Medium';
+  src: url(./fonts/VisbyRoundCF-Medium.otf) format('opentype');
+}
+
+@font-face {
+  font-family: 'VisbyRoundCF-DemiBold';
+  src: url(./fonts/VisbyRoundCF-DemiBold.otf) format('opentype');
+}
+
+@font-face {
+  font-family: 'VisbyRoundCF-Bold';
+  src: url(./fonts/VisbyRoundCF-Bold.otf) format('opentype');
+}
+
+@font-face {
+  font-family: 'VisbyRoundCF-ExtraBold';
+  src: url(./fonts/VisbyRoundCF-ExtraBold.otf) format('opentype');
+}
+
+@font-face {
+  font-family: 'VisbyRoundCF-Heavy';
+  src: url(./fonts/VisbyRoundCF-Heavy.otf) format('opentype');
+}
 
 // general
 body {
@@ -6,9 +30,9 @@ body {
   width: 100vw;
   background: linear-gradient(90deg, $primary-color, $third-color);
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'VisbyRoundCF-Medium', -apple-system, BlinkMacSystemFont,
+    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
 }
 // code {
 //   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -24,6 +48,12 @@ body {
   z-index: -1;
 }
 
+nav {
+  .navbar-brand {
+    color: $primary-color !important;
+  }
+  font-weight: 600 !important;
+}
 // HERO
 #hero {
   display: flex;
@@ -39,7 +69,7 @@ body {
   left: 0;
   h2 {
     font-size: 70px;
-    font-family: Arial, Helvetica, sans-serif;
+    // font-family: Arial, Helvetica, sans-serif;
   }
   img {
     height: 40%;
@@ -75,7 +105,7 @@ body {
   margin-top: 5%;
   h2 {
     color: #e0e9f1;
-    font-family: Arial, Helvetica, sans-serif;
+    // font-family: Arial, Helvetica, sans-serif;
     text-align: center;
   }
   #download {
@@ -100,17 +130,8 @@ body {
 
 // features
 #features {
-  // background-color: rgba(255, 255, 255, 0.8);
-  // background-color: rgb(226, 226, 226);
-  // border-radius: 200px 200px 0 0;
   margin-top: 20vh;
-  // margin-right: 10vw;
-  // margin-left: 10vw;
   position: relative;
-  // display: flex;
-  // flex-direction: column;
-  // align-items: center;
-  // justify-content: space-between;
 
   h2 {
     text-align: center;
@@ -120,47 +141,49 @@ body {
     height: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 10vw 2vw;
+    padding: 10vw 0;
 
     img {
       width: 50%;
+      max-width: 720px;
       height: auto;
-      margin: 0 0.5vw;
+      margin: 0 4vw;
     }
 
-    &:first-child {
+    &:first-child,
+    &:last-child {
       background-color: rgb(226, 226, 226);
+    }
+
+    &:nth-last-child(2) {
+      margin: 0;
+      justify-content: flex-end;
     }
 
     &:last-child {
       margin-bottom: 0;
-      background-color: rgb(226, 226, 226);
     }
   }
 
   figcaption {
-    // padding: 40px;
+    padding: 4vw;
     color: $primary-color;
-    width: 100%;
-    margin: 0 0.5vw;
     text-align: center;
     font-size: 2.5em;
     font-weight: 750;
     letter-spacing: 0.5px;
-  }
-  .second-caption {
-    color: white;
+
+    &.second-caption {
+      color: white;
+    }
   }
 }
 
 /* Contribute */
 #contribute {
-  // background-color: rgba(255, 255, 255, 0.8);
   background-color: $fourth-color;
   padding-top: 80px;
   padding-bottom: 40px;
-
   position: relative;
 
   h1 {
@@ -190,7 +213,7 @@ body {
 .github-icon {
   color: $primary-color;
   &:hover {
-    opacity: 0.9;
+    // opacity: 0.8;
     color: $secondary-color;
   }
 }
@@ -237,7 +260,6 @@ body {
 
         h4 {
           text-align: center;
-          // margin-top: 10%;
         }
 
         &:hover {
