--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -109,8 +109,9 @@ nav .navbar-brand {
 }
 
 #download-title h2 {
-  color: #e0e9f1;
+  color: #f7fbff;
   text-align: center;
+  font-size: 2.2em;
 }
 
 #download-title #download {
@@ -120,12 +121,12 @@ nav .navbar-brand {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin: 10vh;
-  font-size: 24px;
-  color: #e0e9f1;
+  font-size: 1.5rem;
+  color: #f7fbff;
 }
 
 #download-title .download-icons {
@@ -143,7 +144,11 @@ nav .navbar-brand {
       -ms-flex-pack: baseline;
           justify-content: baseline;
   text-decoration: none;
-  color: #e0e9f1;
+  color: #f7fbff;
+}
+
+#download-title .download-icon {
+  margin: 0 10%;
 }
 
 #download-title a:hover {
@@ -154,14 +159,19 @@ nav .navbar-brand {
   background-color: #f6f6f6;
   margin-top: 20vh;
   position: relative;
+  border-top: 6px solid #f7fbff;
 }
 
 #features h1 {
   padding-top: 2vw;
   font-size: 3.5em;
   text-align: center;
+  letter-spacing: 1px;
   font-family: 'VisbyRoundCF-Bold';
-  color: #003459;
+  color: #f7fbff;
+  background-color: #003459;
+  padding: 40px 0;
+  margin: 0;
 }
 
 #features figure {
@@ -177,15 +187,16 @@ nav .navbar-brand {
 }
 
 #features figure img {
-  width: 50%;
-  min-width: 960px;
+  min-width: 50%;
+  width: 960px;
   height: auto;
   margin: 0 4vw;
 }
 
 #features figure:nth-last-child(2) {
   margin: 0;
-  border: 6px solid #f7fbff;
+  border-top: 6px solid #f7fbff;
+  border-bottom: 6px solid #f7fbff;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -193,11 +204,13 @@ nav .navbar-brand {
 
 #features figure:first-child {
   padding-top: 4vw;
+  border-top: 6px solid #f7fbff;
 }
 
 #features figure:last-child {
   padding-bottom: 4vw;
   margin-bottom: 0;
+  border-bottom: 6px solid #f7fbff;
 }
 
 #features figcaption {
@@ -211,6 +224,8 @@ nav .navbar-brand {
 
 /* Contribute */
 #contribute {
+  background-color: #f6f6f6;
+  border: 6px solid #f7fbff;
   padding-top: 80px;
   padding-bottom: 40px;
   position: relative;
@@ -218,12 +233,12 @@ nav .navbar-brand {
 
 #contribute h1 {
   text-align: center;
-  color: #f7fbff;
+  color: #003459;
 }
 
 #contribute h3 {
   text-align: center;
-  color: #f7fbff;
+  color: #003459;
   font-style: italic;
 }
 
@@ -251,7 +266,6 @@ nav .navbar-brand {
 
 .github-icon {
   color: #003459;
-  color: #f7fbff;
 }
 
 .github-icon:hover {
