--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -48,11 +48,40 @@ body {
 }
 
 nav {
+  background-color: rgb(246, 246, 246) !important;
+
+  img {
+    margin-left: 10vh;
+    width: 4rem !important;
+  }
   .navbar-brand {
     font-family: 'VisbyRoundCF-Bold';
+    font-size: 1.7em;
+    letter-spacing: 0.8px;
     color: $primary-color !important;
+    cursor: default !important;
+  }
+
+  .nav-link {
+    font-size: 1.4em;
+
+    &:hover {
+      color: $secondary-color !important;
+    }
+
+    &.active {
+      color: rgba(0, 0, 0, 0.5) !important;
+      &:hover {
+        color: $secondary-color !important;
+      }
+    }
+  }
+
+  Button {
+    margin-right: 10vh;
   }
 }
+
 // HERO
 #hero {
   display: flex;
@@ -63,9 +92,11 @@ nav {
   font-size: 24px;
   right: 0;
   left: 0;
+
   h2 {
     font-size: 70px;
   }
+
   img {
     height: 40%;
     width: 40%;
@@ -78,6 +109,7 @@ nav {
       border-radius: 5px;
       margin: 20px;
       color: $primary-color;
+
       &:first-child {
         margin-left: 0px;
       }
@@ -98,14 +130,81 @@ nav {
   }
 }
 
+// features
+#features {
+  background-color: rgb(246, 246, 246);
+  margin-top: 20vh;
+  position: relative;
+
+  a {
+    text-decoration: none;
+    cursor: default;
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    h1 {
+      padding-top: 2vw;
+      font-size: 3.5em;
+      text-align: center;
+      letter-spacing: 1px;
+      font-family: 'VisbyRoundCF-Bold';
+      color: $primary-color;
+      padding: 40px 0;
+      margin: 0;
+    }
+  }
+
+  figure {
+    height: auto;
+    display: flex;
+    align-items: center;
+    padding: 2vw 0;
+    color: $primary-color;
+
+    img {
+      min-width: 50%;
+      width: 960px;
+      height: auto;
+      margin: 0 4vw;
+    }
+
+    &:nth-last-child(2) {
+      margin: 0;
+      justify-content: flex-end;
+    }
+
+    &:first-child {
+      padding-top: 4vw;
+    }
+
+    &:last-child {
+      padding-bottom: 4vw;
+      margin-bottom: 0;
+    }
+  }
+
+  figcaption {
+    padding: 4vw;
+    color: $primary-color;
+    text-align: center;
+    font-size: 2.5em;
+    font-weight: 750;
+    letter-spacing: 0.5px;
+  }
+}
+
 // ----DOWNLOAD----
 #download-title {
   margin-top: 5%;
 
   h2 {
+    font-style: 'VisbyRoundCF-Bold';
     color: $fourth-color;
     text-align: center;
     font-size: 2.2em;
+    letter-spacing: 0.5px;
   }
 
   #download {
@@ -134,85 +233,33 @@ nav {
   }
 }
 
-// features
-#features {
-  background-color: rgb(246, 246, 246);
-  margin-top: 20vh;
-  position: relative;
-  border-top: 6px solid $fourth-color;
-
-  h1 {
-    padding-top: 2vw;
-    font-size: 3.5em;
-    text-align: center;
-    letter-spacing: 1px;
-    font-family: 'VisbyRoundCF-Bold';
-    color: $fourth-color;
-    background-color: $primary-color;
-    padding: 40px 0;
-    margin: 0;
-  }
-
-  figure {
-    height: auto;
-    display: flex;
-    align-items: center;
-    padding: 2vw 0;
-    color: $secondary-color;
-
-    img {
-      min-width: 50%;
-      width: 960px;
-      height: auto;
-      margin: 0 4vw;
-    }
-
-    &:nth-last-child(2) {
-      margin: 0;
-      border-top: 6px solid $fourth-color;
-      border-bottom: 6px solid $fourth-color;
-      justify-content: flex-end;
-    }
-
-    &:first-child {
-      padding-top: 4vw;
-      border-top: 6px solid $fourth-color;
-    }
-
-    &:last-child {
-      padding-bottom: 4vw;
-      margin-bottom: 0;
-      border-bottom: 6px solid $fourth-color;
-    }
-  }
-
-  figcaption {
-    padding: 4vw;
-    color: $secondary-color;
-    text-align: center;
-    font-size: 2.5em;
-    font-weight: 750;
-    letter-spacing: 0.5px;
-  }
-}
-
 /* Contribute */
 #contribute {
   background-color: rgb(246, 246, 246);
-  border: 6px solid $fourth-color;
   padding-top: 80px;
   padding-bottom: 40px;
   position: relative;
 
-  h1 {
-    text-align: center;
-    color: $primary-color;
+  a {
+    text-decoration: none;
+    cursor: default;
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    h1 {
+      text-align: center;
+      color: $primary-color;
+    }
   }
+
   h3 {
     text-align: center;
     color: $primary-color;
     font-style: italic;
   }
+
   figure {
     display: flex;
     align-items: center;
@@ -220,9 +267,11 @@ nav {
     margin: 0 auto 20px;
     justify-content: center;
   }
+
   figure:last-child {
     margin-bottom: 0;
   }
+
   figcaption {
     padding: 40px;
   }
@@ -238,12 +287,21 @@ nav {
 
 /* Team */
 .team-wrapper {
-  h1 {
-    color: $fourth-color;
-    display: flex;
-    justify-content: center;
-    margin-bottom: 5%;
-    margin-top: 5%;
+  a {
+    text-decoration: none;
+    cursor: default;
+
+    &:hover {
+      text-decoration: none;
+    }
+
+    h1 {
+      color: $fourth-color;
+      display: flex;
+      justify-content: center;
+      margin-bottom: 5%;
+      margin-top: 5%;
+    }
   }
 
   .team-container {
