--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,34 +1,32 @@
 @import 'variables';
 
-@font-face {
-  font-family: 'VisbyRoundCF-Medium';
-  src: url(./fonts/VisbyRoundCF-Medium.otf) format('opentype');
-}
+// @font-face {
+//   font-family: 'VisbyRoundCF-Medium';
+//   src: url(./fonts/VisbyRoundCF-Medium.otf) format('opentype');
+// }
 
-@font-face {
-  font-family: 'VisbyRoundCF-DemiBold';
-  src: url(./fonts/VisbyRoundCF-DemiBold.otf) format('opentype');
-}
+// @font-face {
+//   font-family: 'VisbyRoundCF-DemiBold';
+//   src: url(./fonts/VisbyRoundCF-DemiBold.otf) format('opentype');
+// }
 
-@font-face {
-  font-family: 'VisbyRoundCF-Bold';
-  src: url(./fonts/VisbyRoundCF-Bold.otf) format('opentype');
-}
+// @font-face {
+//   font-family: 'VisbyRoundCF-Bold';
+//   src: url(./fonts/VisbyRoundCF-Bold.otf) format('opentype');
+// }
 
-@font-face {
-  font-family: 'VisbyRoundCF-ExtraBold';
-  src: url(./fonts/VisbyRoundCF-ExtraBold.otf) format('opentype');
-}
+// @font-face {
+//   font-family: 'VisbyRoundCF-ExtraBold';
+//   src: url(./fonts/VisbyRoundCF-ExtraBold.otf) format('opentype');
+// }
 
-@font-face {
-  font-family: 'VisbyRoundCF-Heavy';
-  src: url(./fonts/VisbyRoundCF-Heavy.otf) format('opentype');
-}
+// @font-face {
+//   font-family: 'VisbyRoundCF-Heavy';
+//   src: url(./fonts/VisbyRoundCF-Heavy.otf) format('opentype');
+// }
 
 * {
-  font-family: 'VisbyRoundCF-DemiBold', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: $font-fam;
 }
 
 // general
@@ -65,7 +63,8 @@ nav {
   }
 
   .navbar-brand {
-    font-family: 'VisbyRoundCF-Bold';
+    font-family: $font-fam;
+    font-weight: 600;
     font-size: 1.7em;
     letter-spacing: 0.8px;
     color: $primary-color !important;
@@ -159,10 +158,10 @@ nav {
   position: relative;
   h1 {
     padding-top: 6vh;
-    font-size: 3.5em;
+    font-size: 3em;
     text-align: center;
     letter-spacing: 1px;
-    font-family: 'VisbyRoundCF-Bold';
+    font-family: $font-fam;
     color: $primary-color;
     margin: 0;
   }
@@ -193,7 +192,7 @@ nav {
     padding: 0 1vw;
     color: $primary-color;
     text-align: center;
-    font-size: 2.5em;
+    font-size: 2em;
     font-weight: 750;
     letter-spacing: 0.5px;
     margin: 0;
@@ -205,11 +204,11 @@ nav {
 #download-title {
   margin-top: 5%;
 
-  h2 {
-    font-style: 'VisbyRoundCF-Bold';
+  h1 {
+    font-style: $font-fam;
     color: $fourth-color;
     text-align: center;
-    font-size: 2.2em;
+    font-size: 3em;
     letter-spacing: 0.5px;
   }
 
@@ -249,6 +248,7 @@ nav {
   h1 {
     text-align: center;
     color: $primary-color;
+    font-size: 3em;
   }
 
   h3 {
@@ -290,6 +290,7 @@ nav {
     justify-content: center;
     margin-bottom: 5%;
     margin-top: 5%;
+    font-size: 3em;
   }
 
   .team-container {
