--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,29 +1,19 @@
 @import 'variables';
 
-// @font-face {
-//   font-family: 'VisbyRoundCF-Medium';
-//   src: url(./fonts/VisbyRoundCF-Medium.otf) format('opentype');
-// }
+@font-face {
+  font-family: 'Sen-Regular';
+  src: url(./fonts/Sen-Regular.ttf) format('truetype');
+}
 
-// @font-face {
-//   font-family: 'VisbyRoundCF-DemiBold';
-//   src: url(./fonts/VisbyRoundCF-DemiBold.otf) format('opentype');
-// }
+@font-face {
+  font-family: 'Sen-Bold';
+  src: url(./fonts/Sen-Bold.ttf) format('truetype');
+}
 
-// @font-face {
-//   font-family: 'VisbyRoundCF-Bold';
-//   src: url(./fonts/VisbyRoundCF-Bold.otf) format('opentype');
-// }
-
-// @font-face {
-//   font-family: 'VisbyRoundCF-ExtraBold';
-//   src: url(./fonts/VisbyRoundCF-ExtraBold.otf) format('opentype');
-// }
-
-// @font-face {
-//   font-family: 'VisbyRoundCF-Heavy';
-//   src: url(./fonts/VisbyRoundCF-Heavy.otf) format('opentype');
-// }
+@font-face {
+  font-family: 'Sen-ExtraBold';
+  src: url(./fonts/Sen-ExtraBold.ttf) format('truetype');
+}
 
 * {
   font-family: $font-fam;
@@ -177,6 +167,8 @@ nav {
     img {
       width: 50vw;
       height: auto;
+      -webkit-filter: drop-shadow(5px 5px 5px #222);
+      filter: drop-shadow(5px 5px 5px #222);
     }
 
     &:nth-last-child(2) {
@@ -193,7 +185,7 @@ nav {
     color: $primary-color;
     text-align: center;
     font-size: 2em;
-    font-weight: 750;
+    font-weight: 600;
     letter-spacing: 0.5px;
     margin: 0;
     width: 40vw;
