--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -113,8 +113,9 @@ nav {
   right: 0;
   left: 0;
 
-  h2 {
+  h1 {
     font-size: 70px;
+    letter-spacing: 1px;
   }
 
   img {
@@ -210,8 +211,9 @@ nav {
     font-style: 'VisbyRoundCF-Bold';
     color: $fourth-color;
     text-align: center;
-    font-size: 2.5em;
-    letter-spacing: 0.5px;
+    font-size: 3.5em;
+    letter-spacing: 1px;
+    padding-bottom: 2vh;
   }
 
   #download {
@@ -252,6 +254,7 @@ nav {
     color: $primary-color;
     font-style: 'VisbyRoundCF-Bold';
     font-size: 2.5em;
+    letter-spacing: 0.5px;
   }
 
   h3 {
