--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,9 +26,7 @@
 }
 
 * {
-  font-family: 'VisbyRoundCF-DemiBold', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
-    'Droid Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'VisbyRoundCF-DemiBold';
 }
 
 // general
