Cleaned up merge conflicts

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,6 +32,7 @@ body {
 nav {
   background-color: rgb(246, 246, 246) !important;
   padding: 0.5vh 0 !important;
+  font-family: $font-fam !important;
 
   img {
     margin-left: 10vh;
@@ -39,7 +40,6 @@ nav {
   }
 
   .navbar-brand {
-    font-family: $font-fam;
     font-weight: 600;
     font-size: 1.7em;
     letter-spacing: 0.8px;
@@ -71,7 +71,6 @@ nav {
     background-color: $primary-color !important;
     font-size: 0.9em !important;
     border-radius: 5px !important;
-    font-family: 'VisbyRoundCF-Bold' !important;
 
     &:hover {
       background-color: $secondary-color !important;
@@ -140,7 +139,7 @@ nav {
     padding-top: 6vh;
     font-size: 3em;
     text-align: center;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
     font-family: $font-fam;
     color: $primary-color;
     margin: 0;
@@ -175,8 +174,6 @@ nav {
     color: $primary-color;
     text-align: center;
     font-size: 2em;
-    font-weight: 600;
-    letter-spacing: 0.5px;
     margin: 0;
     width: 40vw;
   }
@@ -187,20 +184,11 @@ nav {
   margin-top: 5%;
 
   h1 {
-<<<<<<< HEAD
-    font-style: 'VisbyRoundCF-Bold';
-    color: $fourth-color;
-    text-align: center;
-    font-size: 3.5em;
-    letter-spacing: 1px;
-    padding-bottom: 2vh;
-=======
     font-style: $font-fam;
     color: $fourth-color;
     text-align: center;
     font-size: 3em;
     letter-spacing: 0.5px;
->>>>>>> 2a4056898c9e6399cd8ea042b5bcb21fe3dee9a0
   }
 
   #download {
@@ -235,24 +223,15 @@ nav {
   background-color: rgb(246, 246, 246);
   padding-top: 10vh;
   position: relative;
+  color: $primary-color;
+  text-align: center;
 
   h1 {
-    text-align: center;
-    color: $primary-color;
-<<<<<<< HEAD
-    font-style: 'VisbyRoundCF-Bold';
-    font-size: 2.5em;
-    letter-spacing: 0.5px;
-=======
     font-size: 3em;
->>>>>>> 2a4056898c9e6399cd8ea042b5bcb21fe3dee9a0
   }
 
   h3 {
-    text-align: center;
-    color: $primary-color;
     font-style: italic;
-    font-family: 'VisbyRoundCF-Bold';
   }
 
   figure {
@@ -286,7 +265,6 @@ nav {
     color: $fourth-color;
     display: flex;
     justify-content: center;
-    font-style: 'VisbyRoundCF-Bold';
     font-size: 2.5em;
     margin-bottom: 5%;
     margin-top: 5%;
